Modified carousel to allow for iPad screen width filling, fixed opacity of new centered fade in divs to 1 on mobile devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -338,21 +338,13 @@
 
 }
 
-.centered-overview {
+.centered-overview, .centered-about, .centered-executives, .centered-map {
   display: inline-block;
   vertical-align: middle;
   color: #ffffff;
   width: 85%;
   opacity: 0;
 
-}
-
-.centered-about {
-  display: inline-block;
-  vertical-align: middle;
-  color: #ffffff;
-  width: 85%;
-  opacity: 0;
 }
 
 .centered-contact {
